[gd_scene load_steps=31 format=3 uid="uid://dk18yh7kobthq"]

[ext_resource type="Script" path="res://GameElements/Skills/SkillManager.gd" id="1_qmdoi"]
[ext_resource type="Texture2D" uid="uid://33a4fljdofkd" path="res://Assets/UI/Skills_button/defense_normal.png" id="2_kcxfs"]
[ext_resource type="Texture2D" uid="uid://cjm65w5usfc8s" path="res://Assets/UI/Skills_button/defense_focused.png" id="3_3h452"]
[ext_resource type="FontFile" uid="uid://da8dsj4hcjptk" path="res://Assets/SuperMilk-nRq9Y.ttf" id="3_lby4j"]
[ext_resource type="Texture2D" uid="uid://bj1sf6iw1kpa3" path="res://Assets/UI/end_screen.png" id="4_r3bw3"]
[ext_resource type="Texture2D" uid="uid://dhguypk40lbjg" path="res://Assets/UI/Skills_button/empty_normal.png" id="4_uv5xn"]
[ext_resource type="Texture2D" uid="uid://blgbcbhvlvfax" path="res://Assets/UI/Skills_button/empty_hover.png" id="5_newcm"]
[ext_resource type="Texture2D" uid="uid://hugbe3prh8dy" path="res://Assets/UI/item/normal.png" id="5_w4gv4"]
[ext_resource type="Texture2D" uid="uid://dpv6xqmm5jm1q" path="res://Assets/UI/Skills_button/locked_skill.png" id="6_7vv01"]
[ext_resource type="Texture2D" uid="uid://4rqv4xeof3p5" path="res://Assets/UI/Skills_button/aoe_turret_icon.png" id="6_e4rk2"]
[ext_resource type="Shader" path="res://Shaders/blur.gdshader" id="6_nuyxt"]
[ext_resource type="Script" path="res://GameElements/Skills/outside_click_control.gd" id="6_o7o7e"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_211iv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gkffb"]
bg_color = Color(0.145098, 0.145098, 0.145098, 0.882353)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="ShaderMaterial" id="ShaderMaterial_w00qt"]
shader = ExtResource("6_nuyxt")
shader_parameter/lod = 1.5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5bvno"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8f1lp"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n0ivw"]
bg_color = Color(0.211765, 0.211765, 0.211765, 0.74902)

[sub_resource type="Animation" id="Animation_qe0q6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1e-05)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_b3oj1"]
resource_name = "hide_list"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.6),
"transitions": PackedFloat32Array(0.233258, 0.233258, 0.233258),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1.1), Vector2(1, 1e-05)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_a13vp"]
resource_name = "show_skill_list"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 0.8),
"transitions": PackedFloat32Array(0.25, 0.90125, 0.90125),
"update": 0,
"values": [Vector2(1, 1e-05), Vector2(1, 1.1), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ifug7"]
resource_name = "showInfoSkill1"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%SkillSelection/../CanvasLayer/InfoContainerSkill_1:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_hjuy6"]
resource_name = "hideInfoSkill1"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../CanvasLayer/InfoContainerSkill_1:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.594604, 0.594604),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_ie244"]
resource_name = "showInfoSkill2"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../CanvasLayer/InfoContainerSkill_2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_05k6r"]
resource_name = "hideInfoSkill2"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../CanvasLayer/InfoContainerSkill_2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_l0c7f"]
resource_name = "showInfoSkill3"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../CanvasLayer/InfoContainerSkill_3:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_3ggch"]
resource_name = "hideInfoSkill3"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../CanvasLayer/InfoContainerSkill_3:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_3d0bf"]
resource_name = "showInfoSkill4"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../CanvasLayer/InfoContainerSkill_4:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_lwa7g"]
resource_name = "hideInfoSkill4"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../CanvasLayer/InfoContainerSkill_4:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l7apm"]
_data = {
"RESET": SubResource("Animation_qe0q6"),
"hideInfoSkill1": SubResource("Animation_hjuy6"),
"hideInfoSkill2": SubResource("Animation_05k6r"),
"hideInfoSkill3": SubResource("Animation_3ggch"),
"hideInfoSkill4": SubResource("Animation_lwa7g"),
"hide_list": SubResource("Animation_b3oj1"),
"showInfoSkill1": SubResource("Animation_ifug7"),
"showInfoSkill2": SubResource("Animation_ie244"),
"showInfoSkill3": SubResource("Animation_l0c7f"),
"showInfoSkill4": SubResource("Animation_3d0bf"),
"show_skill_list": SubResource("Animation_a13vp")
}

[node name="SkillContainer" type="MarginContainer"]
size_flags_horizontal = 4
script = ExtResource("1_qmdoi")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_top = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 16

[node name="SkillButton_1" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
texture_normal = ExtResource("2_kcxfs")
texture_focused = ExtResource("3_3h452")
stretch_mode = 0

[node name="ProgressBarBackground" type="ProgressBar" parent="MarginContainer/VBoxContainer/HBoxContainer/SkillButton_1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/background = SubResource("StyleBoxEmpty_211iv")
theme_override_styles/fill = SubResource("StyleBoxFlat_gkffb")
max_value = 10.0
step = 1.0
fill_mode = 2
show_percentage = false

[node name="Label" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer/SkillButton_1"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -15.5
offset_top = -41.0
offset_right = 14.5
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
bbcode_enabled = true
text = "[center][img=30x30]res://Assets/UI/input/1.png[/img][/center]"

[node name="SkillButton_2" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
texture_normal = ExtResource("2_kcxfs")
texture_focused = ExtResource("3_3h452")
stretch_mode = 0

[node name="ProgressBarBackground" type="ProgressBar" parent="MarginContainer/VBoxContainer/HBoxContainer/SkillButton_2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/background = SubResource("StyleBoxEmpty_211iv")
theme_override_styles/fill = SubResource("StyleBoxFlat_gkffb")
max_value = 20.0
step = 1.0
fill_mode = 2
show_percentage = false

[node name="Label" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer/SkillButton_2"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -15.5
offset_top = -41.0
offset_right = 14.5
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
bbcode_enabled = true
text = "[center][img=30x30]res://Assets/UI/input/2.png[/img][/center]"

[node name="SkillButton_3" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
texture_normal = ExtResource("4_uv5xn")
texture_hover = ExtResource("5_newcm")
texture_focused = ExtResource("3_3h452")
stretch_mode = 0

[node name="ProgressBarBackground" type="ProgressBar" parent="MarginContainer/VBoxContainer/HBoxContainer/SkillButton_3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/background = SubResource("StyleBoxEmpty_211iv")
theme_override_styles/fill = SubResource("StyleBoxFlat_gkffb")
max_value = 60.0
step = 1.0
fill_mode = 2
show_percentage = false

[node name="Label" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer/SkillButton_3"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -15.5
offset_top = -41.0
offset_right = 14.5
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
bbcode_enabled = true
text = "[center][img=30x30]res://Assets/UI/input/3.png[/img][/center]"

[node name="SkillButton_4" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
texture_normal = ExtResource("4_uv5xn")
texture_hover = ExtResource("5_newcm")
texture_focused = ExtResource("3_3h452")
stretch_mode = 0

[node name="ProgressBarBackground" type="ProgressBar" parent="MarginContainer/VBoxContainer/HBoxContainer/SkillButton_4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/background = SubResource("StyleBoxEmpty_211iv")
theme_override_styles/fill = SubResource("StyleBoxFlat_gkffb")
max_value = 60.0
step = 1.0
fill_mode = 2
show_percentage = false

[node name="Label" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer/SkillButton_4"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -15.5
offset_top = -41.0
offset_right = 14.5
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
bbcode_enabled = true
text = "[center][img=30x30]res://Assets/UI/input/4.png[/img][/center]"

[node name="LockSkillTexture" type="TextureRect" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("6_7vv01")

[node name="SkillSelection" type="CanvasLayer" parent="."]
unique_name_in_owner = true
layer = 12
visible = false

[node name="Control" type="ColorRect" parent="SkillSelection" node_paths=PackedStringArray("player")]
material = SubResource("ShaderMaterial_w00qt")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("6_o7o7e")
player = NodePath("../SkillAnimationPlayer")
animation_name = "hide_list"
is_inner_selection = true

[node name="TextureRect" type="TextureRect" parent="SkillSelection"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -377.5
offset_top = -371.0
offset_right = 377.5
offset_bottom = 371.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 1e-05)
texture = ExtResource("4_r3bw3")

[node name="MarginContainer" type="MarginContainer" parent="SkillSelection/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 160
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 160
theme_override_constants/margin_bottom = 40

[node name="ScrollContainer" type="ScrollContainer" parent="SkillSelection/TextureRect/MarginContainer"]
layout_mode = 2

[node name="SkillList" type="ItemList" parent="SkillSelection/TextureRect/MarginContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
mouse_filter = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hovered_color = Color(1, 1, 1, 1)
theme_override_constants/h_separation = 5
theme_override_constants/v_separation = 5
theme_override_constants/icon_margin = 5
theme_override_fonts/font = ExtResource("3_lby4j")
theme_override_font_sizes/font_size = 20
theme_override_styles/panel = SubResource("StyleBoxFlat_5bvno")
theme_override_styles/focus = SubResource("StyleBoxFlat_8f1lp")
theme_override_styles/hovered = SubResource("StyleBoxFlat_n0ivw")
allow_search = false
max_text_lines = 3
auto_height = true
same_column_width = true
fixed_column_width = 400
icon_mode = 0

[node name="SkillAnimationPlayer" type="AnimationPlayer" parent="SkillSelection"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_l7apm")
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="InfoContainerSkill_1" type="MarginContainer" parent="CanvasLayer"]
visible = false
offset_left = 765.0
offset_top = 775.0
offset_right = 1153.0
offset_bottom = 915.0
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/InfoContainerSkill_1"]
layout_mode = 2
texture = ExtResource("5_w4gv4")
expand_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/InfoContainerSkill_1/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/InfoContainerSkill_1/TextureRect/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 10

[node name="InfoIconTexture" type="TextureRect" parent="CanvasLayer/InfoContainerSkill_1/TextureRect/HBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("6_e4rk2")

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/InfoContainerSkill_1/TextureRect/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="InfoRichLabel" type="RichTextLabel" parent="CanvasLayer/InfoContainerSkill_1/TextureRect/HBoxContainer/MarginContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_lby4j")
bbcode_enabled = true
text = "- [color=purple] Name [/color] -
Description

Mana cost : [color=RoyalBlue] price [/color]"

[node name="InfoContainerSkill_2" type="MarginContainer" parent="CanvasLayer"]
visible = false
offset_left = 765.0
offset_top = 775.0
offset_right = 1153.0
offset_bottom = 915.0
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/InfoContainerSkill_2"]
layout_mode = 2
texture = ExtResource("5_w4gv4")
expand_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/InfoContainerSkill_2/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/InfoContainerSkill_2/TextureRect/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 10

[node name="InfoIconTexture" type="TextureRect" parent="CanvasLayer/InfoContainerSkill_2/TextureRect/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("6_e4rk2")

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/InfoContainerSkill_2/TextureRect/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="InfoRichLabel" type="RichTextLabel" parent="CanvasLayer/InfoContainerSkill_2/TextureRect/HBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_lby4j")
bbcode_enabled = true
text = "- [color=purple] Name [/color] -
Description

Mana cost : [color=RoyalBlue] price [/color]"

[node name="InfoContainerSkill_3" type="MarginContainer" parent="CanvasLayer"]
visible = false
offset_left = 765.0
offset_top = 775.0
offset_right = 1153.0
offset_bottom = 915.0
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/InfoContainerSkill_3"]
layout_mode = 2
texture = ExtResource("5_w4gv4")
expand_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/InfoContainerSkill_3/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/InfoContainerSkill_3/TextureRect/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 10

[node name="InfoIconTexture" type="TextureRect" parent="CanvasLayer/InfoContainerSkill_3/TextureRect/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("6_e4rk2")

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/InfoContainerSkill_3/TextureRect/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="InfoRichLabel" type="RichTextLabel" parent="CanvasLayer/InfoContainerSkill_3/TextureRect/HBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_lby4j")
bbcode_enabled = true
text = "- [color=purple] Name [/color] -
Description


Mana cost : [color=RoyalBlue] price [/color]"

[node name="InfoContainerSkill_4" type="MarginContainer" parent="CanvasLayer"]
visible = false
offset_left = 765.0
offset_top = 775.0
offset_right = 1153.0
offset_bottom = 915.0
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/InfoContainerSkill_4"]
layout_mode = 2
texture = ExtResource("5_w4gv4")
expand_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/InfoContainerSkill_4/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/InfoContainerSkill_4/TextureRect/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 10

[node name="InfoIconTexture" type="TextureRect" parent="CanvasLayer/InfoContainerSkill_4/TextureRect/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("6_e4rk2")

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/InfoContainerSkill_4/TextureRect/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="InfoRichLabel" type="RichTextLabel" parent="CanvasLayer/InfoContainerSkill_4/TextureRect/HBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_lby4j")
bbcode_enabled = true
text = "- [color=purple] Name [/color] -
Description


Mana cost : [color=RoyalBlue] price [/color]"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/HBoxContainer/SkillButton_1" to="." method="_on_skill_button_1_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/HBoxContainer/SkillButton_1" to="." method="_on_skill_button_1_mouse_exited"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/SkillButton_1" to="." method="_on_skill_button_1_pressed"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/HBoxContainer/SkillButton_2" to="." method="_on_skill_button_2_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/HBoxContainer/SkillButton_2" to="." method="_on_skill_button_2_mouse_exited"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/SkillButton_2" to="." method="_on_skill_button_2_pressed"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/HBoxContainer/SkillButton_3" to="." method="_on_skill_button_3_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/HBoxContainer/SkillButton_3" to="." method="_on_skill_button_3_mouse_exited"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/SkillButton_3" to="." method="_on_skill_button_3_pressed"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/HBoxContainer/SkillButton_4" to="." method="_on_skill_button_4_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/HBoxContainer/SkillButton_4" to="." method="_on_skill_button_4_mouse_exited"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/SkillButton_4" to="." method="_on_skill_button_4_pressed"]
[connection signal="gui_input" from="SkillSelection/Control" to="SkillSelection/Control" method="_on_gui_input"]
[connection signal="item_activated" from="SkillSelection/TextureRect/MarginContainer/ScrollContainer/SkillList" to="." method="_on_skill_list_item_activated"]
[connection signal="item_clicked" from="SkillSelection/TextureRect/MarginContainer/ScrollContainer/SkillList" to="." method="_on_skill_list_item_clicked"]
[connection signal="animation_finished" from="SkillSelection/SkillAnimationPlayer" to="." method="_on_skill_animation_player_animation_finished"]
